[gd_scene load_steps=25 format=2]

[ext_resource path="res://Assets/Player/crosshair.png" type="Texture" id=1]
[ext_resource path="res://Assets/Player/sniperscope.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/grobold_16.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/Fonts/grobold_32.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/Player/sync.svg" type="Texture" id=5]
[ext_resource path="res://Assets/UI/skull.png" type="Texture" id=6]
[ext_resource path="res://Assets/Player/damageoverlay.png" type="Texture" id=7]
[ext_resource path="res://Scenes/player/HUD/HUD.gd" type="Script" id=8]
[ext_resource path="res://Assets/Weapons/Icons/pistol.png" type="Texture" id=9]
[ext_resource path="res://Assets/Weapons/Icons/knife.png" type="Texture" id=10]
[ext_resource path="res://Assets/Weapons/Icons/m4.png" type="Texture" id=11]
[ext_resource path="res://Assets/UI/death.png" type="Texture" id=12]
[ext_resource path="res://Scenes/player/HUD/HealthBar.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/GameMenu/GameMenu.tscn" type="PackedScene" id=14]
[ext_resource path="res://Assets/Player/bullet.png" type="Texture" id=15]
[ext_resource path="res://Scenes/player/HUD/Killfeed/Killfeed.tscn" type="PackedScene" id=16]
[ext_resource path="res://Scenes/player/HUD/Crosshair/Crosshairline.tscn" type="PackedScene" id=18]

[sub_resource type="GDScript" id=4]
script/source = "extends Control

var color_unselected = Color(0.7,0.7,0.7)
var color_selected = Color(1,1,1)

var slots = []

onready var primary = $VBoxContainer/GridContainer/Control/Primary
onready var secondary = $VBoxContainer/GridContainer/Control2/Secondary
onready var knife = $VBoxContainer/GridContainer/Control3/Knife

func _ready():
	slots.push_back(primary)
	slots.push_back(secondary)
	slots.push_back(knife)
	deselect_all()

func init_icons(items):
	for i in range(slots.size()):
		var icon_path = ItemDB.get_item(items[i])[\"icon\"]
		slots[i].texture = load(icon_path)

func select_slot(index):
	deselect_all()
	slots[index].modulate = color_selected

func deselect_all():
	for slot in slots:
		slot.modulate = color_unselected
"

[sub_resource type="GDScript" id=1]
script/source = "extends Label

onready var reloader = $Position2D/ReloadSprite
onready var anim = $Position2D/ReloadSprite/AnimationPlayer

func _ready():
	anim.play(\"idle\")
	reloader.visible = false

func reload(reload_time):
	anim.play(\"reload\")
	reloader.visible = true
	yield(get_tree().create_timer(reload_time), \"timeout\")
	stop_reload()

func stop_reload():
	anim.play(\"idle\")
	reloader.visible = false
"

[sub_resource type="Animation" id=2]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("..:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("..:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0 ]
}

[sub_resource type="Animation" id=5]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("DamageIndicator:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.25 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("Flash:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.929412 ) ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("Flash:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.901961 ), Color( 1, 1, 1, 0 ) ]
}

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 8 )

[node name="Crosshair" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="crosshair" type="Sprite" parent="Crosshair"]
visible = false
position = Vector2( 32, 32 )
texture = ExtResource( 1 )

[node name="Top" type="Position2D" parent="Crosshair"]
position = Vector2( 32, 32 )
rotation = 3.14159

[node name="Line" parent="Crosshair/Top" instance=ExtResource( 18 )]

[node name="Right" type="Position2D" parent="Crosshair"]
position = Vector2( 32, 32 )
rotation = -1.5708

[node name="Line" parent="Crosshair/Right" instance=ExtResource( 18 )]

[node name="Botom" type="Position2D" parent="Crosshair"]
position = Vector2( 32, 32 )

[node name="Line" parent="Crosshair/Botom" instance=ExtResource( 18 )]

[node name="Left" type="Position2D" parent="Crosshair"]
position = Vector2( 32, 32 )
rotation = 1.5708

[node name="Line" parent="Crosshair/Left" instance=ExtResource( 18 )]

[node name="Scope" type="TextureRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Killfeed" parent="." instance=ExtResource( 16 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.166077
margin_bottom = -0.166077
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Top" type="MarginContainer" parent="VBoxContainer"]
margin_right = 1920.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )

[node name="FPSCountLabel" type="Label" parent="VBoxContainer/Top"]
margin_top = 6.0
margin_right = 1920.0
margin_bottom = 25.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
text = "FPS: 144"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 32.0
margin_right = 1920.0
margin_bottom = 80.0
size_flags_horizontal = 3
custom_constants/separation = 700
alignment = 1

[node name="KillsDeaths" type="HBoxContainer" parent="VBoxContainer/Stats"]
margin_left = 858.0
margin_right = 1061.0
margin_bottom = 48.0
size_flags_vertical = 3
custom_constants/separation = 25

[node name="Kills" type="HBoxContainer" parent="VBoxContainer/Stats/KillsDeaths"]
margin_right = 89.0
margin_bottom = 48.0
custom_constants/separation = 5

[node name="KillIcon" type="TextureRect" parent="VBoxContainer/Stats/KillsDeaths/Kills"]
margin_right = 48.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 32 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 6

[node name="KillCountLabel" type="Label" parent="VBoxContainer/Stats/KillsDeaths/Kills"]
margin_left = 53.0
margin_right = 89.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = ExtResource( 4 )
text = "99"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Deaths" type="HBoxContainer" parent="VBoxContainer/Stats/KillsDeaths"]
margin_left = 114.0
margin_right = 203.0
margin_bottom = 48.0
custom_constants/separation = 5

[node name="DeathIcon" type="TextureRect" parent="VBoxContainer/Stats/KillsDeaths/Deaths"]
margin_right = 48.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
texture = ExtResource( 12 )
expand = true
stretch_mode = 6

[node name="DeathCountLabel" type="Label" parent="VBoxContainer/Stats/KillsDeaths/Deaths"]
margin_left = 53.0
margin_right = 89.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = ExtResource( 4 )
text = "99"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeaponSlots" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -168.0
margin_top = -256.0
rect_min_size = Vector2( 168, 256 )
size_flags_horizontal = 0
size_flags_vertical = 0
script = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="WeaponSlots"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -10.0
margin_bottom = -10.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="WeaponSlots/VBoxContainer"]
margin_right = 158.0
margin_bottom = 223.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="CenterContainer" parent="WeaponSlots/VBoxContainer/GridContainer"]
margin_right = 158.0
margin_bottom = 71.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Primary" type="TextureRect" parent="WeaponSlots/VBoxContainer/GridContainer/Control"]
modulate = Color( 0.75, 0.75, 0.75, 1 )
margin_left = 47.0
margin_top = 3.0
margin_right = 111.0
margin_bottom = 67.0
texture = ExtResource( 11 )

[node name="Control2" type="CenterContainer" parent="WeaponSlots/VBoxContainer/GridContainer"]
margin_top = 76.0
margin_right = 158.0
margin_bottom = 147.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Secondary" type="TextureRect" parent="WeaponSlots/VBoxContainer/GridContainer/Control2"]
margin_left = 47.0
margin_top = 3.0
margin_right = 111.0
margin_bottom = 67.0
texture = ExtResource( 9 )

[node name="Control3" type="CenterContainer" parent="WeaponSlots/VBoxContainer/GridContainer"]
margin_top = 152.0
margin_right = 158.0
margin_bottom = 223.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Knife" type="TextureRect" parent="WeaponSlots/VBoxContainer/GridContainer/Control3"]
modulate = Color( 0.75, 0.75, 0.75, 1 )
margin_left = 33.0
margin_top = 19.0
margin_right = 125.0
margin_bottom = 51.0
rect_min_size = Vector2( 92, 32 )
texture = ExtResource( 10 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ammo" type="HBoxContainer" parent="WeaponSlots/VBoxContainer"]
margin_top = 227.0
margin_right = 158.0
margin_bottom = 246.0
size_flags_horizontal = 3
custom_constants/separation = 0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BulletIcon" type="TextureRect" parent="WeaponSlots/VBoxContainer/Ammo"]
margin_right = 32.0
margin_bottom = 19.0
rect_min_size = Vector2( 32, 0 )
texture = ExtResource( 15 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AmmoLabel" type="Label" parent="WeaponSlots/VBoxContainer/Ammo"]
margin_left = 32.0
margin_right = 110.0
margin_bottom = 19.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = ExtResource( 3 )
text = "5 / 5"
align = 1
valign = 1
script = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Position2D" type="Position2D" parent="WeaponSlots/VBoxContainer/Ammo/AmmoLabel"]
position = Vector2( 38, 9.5 )

[node name="ReloadSprite" type="TextureRect" parent="WeaponSlots/VBoxContainer/Ammo/AmmoLabel/Position2D"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
rect_min_size = Vector2( 16, 16 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="WeaponSlots/VBoxContainer/Ammo/AmmoLabel/Position2D/ReloadSprite"]
anims/idle = SubResource( 2 )
anims/reload = SubResource( 3 )

[node name="Control" type="Control" parent="WeaponSlots/VBoxContainer/Ammo"]
margin_left = 110.0
margin_right = 158.0
margin_bottom = 19.0
rect_min_size = Vector2( 48, 0 )
size_flags_vertical = 3

[node name="HealthBar" parent="." instance=ExtResource( 13 )]
margin_top = -49.0
margin_bottom = -32.0

[node name="DamageIndicator" type="TextureRect" parent="."]
visible = false
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/damage = SubResource( 5 )
anims/flash = SubResource( 6 )
anims/unflash = SubResource( 7 )

[node name="UpdateFPSTimer" type="Timer" parent="."]

[node name="GameMenu" parent="." instance=ExtResource( 14 )]
visible = false
margin_top = 0.630249
margin_bottom = 0.630249
[connection signal="timeout" from="UpdateFPSTimer" to="." method="_on_UpdateFPSTimer_timeout"]
